add Engine submodule, shader and ShaderProgram classes. Implement Context.