@@ -14,8 +14,8 @@ repositories {
 }
 
 dependencies {
-    implementation project(path: ':')
     implementation project(path: ':Logging')
+    implementation project(path: ':Engine')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
@@ -23,7 +23,20 @@ dependencies {
     implementation 'org.jogamp.jogl:jogl-all-main:2.4.0'
 }
 
-mainClassName = "com.mpcs.scratchpad.editor.Main"
+mainClassName = "com.mpcs.scratchpad.editor.EditorApp"
+
+run {
+    jvmArgs = ['--add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/javafx.stage=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/javafx.stage=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
+}
+
+
+//tasks.withType(JavaExec).configureEach {
+//    jvmArgs += '--add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED'
+//}
 
 
 javafx {
